--- a/segor/src/main/resources/application.properties
+++ b/segor/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=segor
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ifb202_project
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.thymeleaf.cache=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.port=8081
